# delma-python

./: README.md
delma/: CHANGELOG.md  eml.xml  metadata.md  pyproject.toml  setup.cfg  setup.py
delma/src/delma/: __init__.py  check_eml_xml.py  create_md.py  display_as_dataframe.py  write_eml_xml.py
delma/src/delma_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
delma/tests/: eml.xml  test_delma.py
delma/tests/testing/: testing.md
docs/source/: conf.py  index.rst
docs/source/_static/css/: extra.css
docs/source/apidoc/: delma.rst  paperbark.rst
docs/source/authors/: index.rst
docs/source/delma_user_guide/: Generating_Initial_Markdown.rst  index.rst  metadata_run.py
docs/source/getting_started/: Installation.rst  Prerequisites.rst  index.rst
paperbark/: metadata.md  pyproject.toml  setup.cfg  setup.py
paperbark/src/paperbark/: __init__.py  check_eml_xml.py  create_metadata_file.py  make_eml_xml.py  version.py
paperbark/src/paperbark_python.egg-info/: PKG-INFO  SOURCES.txt
