[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "delma"
package = "delma"
version = "0.1.0"
description = "Code repository for the delma-python package, which is for manipulating data into Darwin Core standard"
authors = [
    "Amanda Buyan <amanda.buyan@csiro.au>", 
    "Martin Westgate <martin.westgate@csiro.au>",
    "Atlas of Living Australia <support@ala.org.au>"
]
license = "GNU General Public License v3.0"
readme = "README.md"
homepage = "http://delma.ala.org.au/Python"
repository = "https://github.com/AtlasOfLivingAustralia/delma-python"
