[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "corella"
package = "corella"
version = "0.1.0"
description = "Code repository for the corella-python package, which is for manipulating data into Darwin Core standard"
authors = [
    "Amanda Buyan <amanda.buyan@csiro.au>", 
    "Martin Westgate <martin.westgate@csiro.au>",
    "Atlas of Living Australia <support@ala.org.au>"
]
license = "GNU General Public License v3.0"
readme = "README.md"
homepage = "http://corella.ala.org.au/Python"
repository = "https://github.com/AtlasOfLivingAustralia/corella-python"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
beautifulsoup4 = "^4.12.2"
configparser = "^6.0.0"
pytest = "^7.4.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
